# fdg

./: .buildinfo  CMakeLists.txt  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  sg_execution_times.html
.doctrees/: environment.pickle  index.doctree  sg_execution_times.doctree
.doctrees/auto_examples/: index.doctree  plot_advdif.doctree  plot_basis_sets.doctree  plot_domains.doctree  plot_function_spaces.doctree  plot_gradients.doctree  plot_integration_rules.doctree  plot_poisson.doctree  sg_execution_times.doctree
.doctrees/source/: basis_functions.doctree  covector_basis.doctree  degrees_of_freedom.doctree  domain_types.doctree  incidence.doctree  index.doctree  inner_product.doctree  integration.doctree  interior_product.doctree  kform_transformations.doctree  kform_types.doctree  space_map.doctree
.github/workflows/: cmake-single-platform.yml  documentation.yml
_downloads/03c658fec9caec71005dcb97aa0a64a2/: plot_function_spaces.py
_downloads/776cb11df6340a6d48a5db6b12b28fd8/: plot_gradients.py
_downloads/86dacfe9754030634dbfb4c8be27dae1/: plot_advdif.py
_downloads/9c3b78077773ad526d8571ce8d23cb02/: plot_poisson.py
_downloads/a4eaa4ff44dab142fd71091ba5a56602/: plot_integration_rules.py
_downloads/c3ee3a6ad3b26a79b892f08d32f20b53/: plot_basis_sets.ipynb
_downloads/d600d1af86e1aba9e9db6dd1099119f3/: plot_integration_rules.ipynb
_downloads/dd813bd6c271f52b87c333d66fec2e6d/: plot_poisson.ipynb
_downloads/e9150fcb1ca731d81a1148fcbf34b1d0/: plot_gradients.ipynb
_downloads/ea56b1a9802c2435dc2972838b741967/: plot_advdif.ipynb
_downloads/ec355778341f35056a70f4cca9c6af5f/: plot_function_spaces.ipynb
_downloads/f47099f22367a5209ff8423628a16557/: plot_domains.ipynb
_modules/: index.html
_modules/fdg/: degrees_of_freedom.html  domains.html  enum_type.html  integration.html
_sources/: sg_execution_times.rst.txt
_sources/auto_examples/: index.rst.txt  plot_advdif.rst.txt  plot_basis_sets.rst.txt  plot_domains.rst.txt  plot_function_spaces.rst.txt  plot_gradients.rst.txt  plot_integration_rules.rst.txt  plot_poisson.rst.txt  (+1 more)
auto_examples/: index.html  plot_advdif.html  plot_basis_sets.html  plot_domains.html  plot_function_spaces.html  plot_gradients.html  plot_integration_rules.html  plot_poisson.html  sg_execution_times.html
doc/: conf.py  index.rst
examples/: plot_advdif.py  plot_basis_sets.py  plot_domains.py  plot_integration_rules.py  plot_poisson.py
source/: basis_functions.html  covector_basis.html  degrees_of_freedom.html  domain_types.html  incidence.html  index.html  inner_product.html  integration.html  interior_product.html  kform_transformations.html  kform_types.html  space_map.html
test_c/: CMakeLists.txt
test_c/basis/: test_basis_set_registry.c  test_covector_basis.c
test_c/common/: common.h  test_rw_lock.c
test_c/integration/: test_glg.c  test_gll.c  test_int_rule_registry.c
test_c/operations/: test_back_substitute.c  test_boundary_scaling.c  test_qr_decomposition.c  test_qr_decomposition_2.c  test_qr_decomposition_3.c  test_topo.c  test_topo_1d.c  test_topo_2d.c  topo_common.c  topo_common.h
tests/: test_basis_transform.py  test_covector_basis.py  test_dofs.py  test_function_space.py  test_general.py  test_gradient.py  test_incidence.py  test_integration_rule.py  test_integration_space.py  test_interior_product.py  test_kform_incidence.py  test_kform_mass_matrix.py  test_kform_transforms.py  test_kform_types.py  test_l2_proj.py  test_mapping.py  test_mass_matrix.py
(+76 files in other folders)
